# jellyfin-rpc

jellyfin-rpc/: Cargo.toml
jellyfin-rpc-cli/: Cargo.toml
jellyfin-rpc-cli/src/: config.rs  main.rs
jellyfin-rpc/src/: lib.rs
