[package]
name        = "jellyfin-rpc"
version     = "1.3.4"
edition     = "2021"
description = "Backend for the Jellyfin-RPC-cli and Jellyfin-RPC-Iced projects"
license     = "GPL-3.0-or-later"
repository  = "https://github.com/eemj/jellyfin-rpc"
keywords     = ["jellyfin", "discord", "rich-presence"]

[dependencies]
# Using git version for .name() method support (not available in crates.io v1.0.0)
# Locked to specific commit to prevent breaking changes
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git", rev = "f89cda99a3b2148cbf8ab3b634e1cf0141e24e18" }
serde_json            = "1.0"
log                   = "0.4"
url                   = "2.5"
chrono                = "0.4"
image                 = "0.25"

[dependencies.serde]
features = ["derive"]
version  = "1.0"

[dependencies.reqwest]
default-features = false
features         = ["rustls-tls", "json", "blocking", "multipart"]
version          = "0.12"
